# urpc

./: .gitignore  CMakeLists.txt  Makefile  build  build.sh  urpc.pc.in
doc/: Doxyfile  html_header  mainpage.doxy  security.doxy
tests/: CMakeLists.txt  common-test.c  data-test.c  hash-table-test.c  mem-chunk-test.c  mutex-static-test.c  mutex-test.c  network-test.c  rwmutex-test.c  semaphore-test.c  shm-client-test.c  shm-server-test.c  timer-test.c  urpc-test.c
urpc/: CMakeLists.txt  endianness.h  urpc-client.c  urpc-client.h  urpc-common.c  urpc-common.h  urpc-data.c  urpc-data.h  urpc-endian.h  urpc-exports.h  urpc-hash-table.c  urpc-hash-table.h  urpc-mem-chunk.c  urpc-mem-chunk.h  urpc-mutex.h  urpc-network.c  urpc-network.h  urpc-posix-mutex.c  urpc-posix-network.c  urpc-posix-rwmutex.c  urpc-posix-semaphore.c  urpc-posix-shm.c  urpc-posix-thread.c  urpc-posix-timer.c  urpc-rwmutex.h  urpc-semaphore.h  urpc-server.c  urpc-server.h  urpc-shm-client.c  urpc-shm-client.h  urpc-shm-server.c  urpc-shm-server.h  urpc-shm.h  urpc-tcp-client.c  urpc-tcp-client.h  urpc-tcp-server.c  urpc-tcp-server.h  urpc-thread.h  urpc-timer.h  urpc-types.h  (+12 more)
